--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+*, .list{
+    text-align: center;
+    list-style-position: inside;
+    color:blanchedalmond
+
+}
 *{
-    font-family: 'Times New Roman', Times, serif;
+    background-color: black;
 }
