--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
-*, .list{
+*{
     text-align: center;
     list-style-position: inside;
-    color:blanchedalmond
-
+    color:blanchedalmond;
 }
 *{
     background-color: black;
